readme, fixed button dropdown alignment relative to monks, fixed mobile speech box

--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,6 @@ body {
   left: 0.6vw;
   margin: 1% 0.5%;
   width: 30%;
-  z-index: 3;
 }
 
 #title {
@@ -279,7 +278,7 @@ body {
 
 #monks-closed {
   position: absolute;
-  z-index: -3;
+  z-index: -103;
   bottom: 30%;
   height: 44%;
   left: 50%;
@@ -287,7 +286,7 @@ body {
 }
 #monks-open {
   position: absolute;
-  z-index: -2;
+  z-index: -102;
   height: 44%;
   bottom: 30%;
   left: 50%;
@@ -295,7 +294,7 @@ body {
 }
 #monks-closed-noeyes {
   position: absolute;
-  z-index: -1;
+  z-index: -101;
   height: 44%;
   bottom: 30%;
   left: 50%;
@@ -313,7 +312,7 @@ body {
   display: flex;
   align-items: flex-end;
   margin: 6px 6px;
-  z-index: 5;
+  z-index: 30;
 }
 
 #speech-text {
@@ -328,20 +327,20 @@ body {
   padding: 6px 14px;
   display: none;
   transition: color 0.10s;
-  z-index: 8;
+  z-index: 50;
 }
 
 #ghost-box {
   font-family: "Alagard";
   font-size: 1.25vw;
   position: absolute;
-  height: 22%;
-  top: 2%;
+  height: 2%;
+  top: 22%;
   left: 18%;
   right: 18%;
   display: flex;
-  align-items: flex-end;
   justify-content: center;
+
   margin: 6px 6px;
   z-index: -8;
 }
@@ -349,10 +348,9 @@ body {
 #ghost-text {
   position: absolute;
   margin: 2px 6px;
-  /* border-style: solid;
-  border-width: 1px; */
   border-radius: 10px;
-  border-color: black;
+  /* border-style: solid;
+  border-color: #a50202; */
   background-color: #ddd0b9;
   padding: 6px 14px;
   opacity: 0;
@@ -638,16 +636,17 @@ cite {
     margin-top: 5%;
   }
   #left-content {
-    width: 60%;
+    width: 40%;
   }
   .btn {
     font-size: 2.25vw;
   }
   .dropdown-menu {
-    z-index: 4000000;
+    z-index: 40;
   }
   .dropdown-item {
     font-size: 2vw;
+    z-index: 40;
   }
   #disclaimer {
     display: none;
@@ -675,6 +674,9 @@ cite {
   }
   #speech-box {
     top: 35%;
+    font-size: 1.6vw;
+  }
+  #ghost-box {
     font-size: 1.6vw;
   }
   #blue-text-div {
